# encrypt-stuff

./: Cargo.toml  README.md
scripts/: gen_macros.py
src/: encryption.rs  error.rs  lib.rs
src/schemes/: aes128gcm.rs  aes128gcmsiv.rs  aes256gcm.rs  aes256gcmsiv.rs  chacha12poly1305.rs  chacha20poly1305.rs  chacha8poly1305.rs  mod.rs  xchacha12poly1305.rs  xchacha20poly1305.rs  xchacha8poly1305.rs
src/serialization/: bincode.rs  bitcode.rs  decode.rs  encode.rs  mod.rs
src/symmetric/: decode.rs  encryption.rs  mod.rs
src/symmetric/ciphers/: mod.rs
src/symmetric/schemes/: bincode.rs  bitcode.rs  mod.rs
